--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="app"></div>
   <script src="https://cdn.bootcss.com/Swiper/4.5.0/js/swiper.js"></script>
-  <script src="./libs/zepto.min.js"></script>
+  <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
   <script src="./libs/template-web.js"></script>
   <script src="./scripts/app.js"></script>
 </body>
