--- a/dev/index.html
+++ b/dev/index.html
@@ -14,6 +14,7 @@
   <!-- <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script> -->
   <script src="./libs/zepto.min.js"></script>
   <script src="./libs/template-web.js"></script>
+  <script src="./libs/socket.io.js"></script>
   <script src="./scripts/app.js"></script>
 </body>
 </html>
